--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /node_modules
+/.vscode
+/.idea
 /build
 .env
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
