--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,14 @@
     "no-console": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "operator-linebreak": "off",
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index", "object"],
+        "newlines-between": "always",
+        "alphabetize": { "order": "asc", "caseInsensitive": true }
+      }
+    ]
   }
 }
